Fix blockquote alignment

--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,11 @@ body {
   font-weight: normal;
   line-height: 1.3rem;
   color: #222;
-  margin: 3rem;
+  margin: 10px;
 }
 
 article header {
-  margin-bottom: 1em;
+  margin-bottom: 10px;
 }
 
 article h1 {
@@ -38,12 +38,19 @@ article p {
 
 blockquote {
   text-align: center;
-  color: #999;
-  font-size: 1.5rem;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  color: #555;
+  font-size: 1em;
+}
+
+blockquote p {
+  text-align: center;
 }
 
 .quote {
-  color: #555;
+  color: #999;
 }
 
 article ol {
